First commit of adaptation to the new API. Left to do: find a way to grab the VigiCrues index for the given Tronçon
Signed-off-by: Gaël L'hopital <gael@lhopital.org>